--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://unpkg.com/lucide-dev@0.395.0"></script>
     <!-- Tailwind Typography for 'prose' styling -->
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     
     <style>
         /* Custom font */
